--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+ul li{
+  list-style-type: none;
+  margin-bottom: 20px;
+
+}
+
+ul {
+  background-color: purple;
+  max-width: 500px;
+  margin: auto;
+  margin-top: 10px;
+  padding: 50px;
+  color: white;
+  border-radius: 20px;
+}
+input{
+  min-height: 40px;
+  margin-top: 10px;
+  width: 500px;
+  border-radius: 5px;
+}
